# feel-tauri-mobile

./: .gitignore  README.md  clear.sh  package.json  pnpm-lock.yaml  track.md  track.uno.md  track.v2.md  tsconfig.json  uno.config.ts  vite.config.ts
src/: App.tsx  app.tsx  layout.tsx  main.tsx  route.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/pages/: about.tsx  home.tsx  path.tsx
