[package]
name = "feel-tauri-mobile"
version = "0.0.0"
description = "A Tauri App"
authors = [""]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "feel_tauri_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.0.2", features = [] }
tauri-plugin-shell = "2.0.2 "
tauri-plugin-os = "2.0.1"
tauri-plugin-dialog = "2.0.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
